# SwarmPAL-processor

./: .gitignore  Dockerfile  LICENSE  README.md  app.ipynb  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt  start-dashboard.sh
.github/workflows/: docker-publish.yml
ansible/: README.md  inventory.yaml  swarmpal_processor_dev.yaml
ansible/roles/swarmpal/handlers/: main.yaml
ansible/roles/swarmpal/tasks/: main.yaml
ansible/roles/swarmpal/templates/: docker-compose.yaml  env  nginx_default.conf
dashboards/: FAC.py  MMA.py  TFA.py  common.py  fac-fast.py  file-demo.py
dashboards/code_templates/: fac-single-sat-cli.jinja2  fac-single-sat.jinja2  mma-2e.jinja2  tfa.jinja2
tasks/: fac-fast-processor.py  inotifywait_rsync.sh  start_tasks.sh
