[project]
name = "swarmpal-processor"
version = "0.1.0"
description = "Provides dashboards and 'processor mode' for SwarmPAL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hvplot>=0.11.2",
    "jupyterlab>=4.3.5",
    "panel>=1.6.0",
    "python-dotenv>=1.0.1",
    "swarmpal",
]

[tool.uv.sources]
swarmpal = { git = "https://github.com/Swarm-DISC/SwarmPAL.git", rev = "c37bc7b" }
